--- a/Front/RoyalHotel-App/src/app/components/adm/dashboardAdm/dashboardAdm.component.html
+++ b/Front/RoyalHotel-App/src/app/components/adm/dashboardAdm/dashboardAdm.component.html
@@ -1,8 +1,9 @@
 <div class="row">
-  <div class="col-2" style="height: 100%;">
+  <div class="col-2">
     <app-sidebar></app-sidebar>
   </div>
   <div class="col-10">
-    <app-hospede-lista></app-hospede-lista>
+    <app-inicio-adm></app-inicio-adm>
   </div>
 </div>
+
