--- a/Front/RoyalHotel-App/src/app/components/adm/lista-fornecedores/lista-fornecedores.component.html
+++ b/Front/RoyalHotel-App/src/app/components/adm/lista-fornecedores/lista-fornecedores.component.html
@@ -1,4 +1,18 @@
 <div class="container" style="margin-bottom: 100px;">
+  <div class="d-flex p-3 my-3 text-white bg-secondary rounded shadow-sm">
+    <div class="d-flex align-items-center mr-auto">
+      <i id="i" class="{{iconClass}} mr-3"></i>
+      <div class="lh-100">
+        <h2 class="mb-0">Fornecedores</h2>
+        <small>{{subtitulo}}</small>
+      </div>
+    </div>
+    <div class="p-3">
+      <button class="btn btn-outline-light" (click)="listar()">
+        Retornar ao Menu
+      </button>
+    </div>
+  </div>
   <div class="card rounded shadow-sm p-3">
     <div class="d-flex">
       <div class="flex-fill pr-3">
@@ -9,8 +23,7 @@
           <input
           type="text"
           class="form-control"
-          placeholder="Filtrar por nome"
-          >
+          placeholder="Filtrar por nome">
         </div>
       </div>
       <div>
