--- a/Front/RoyalHotel-App/src/app/components/adm/sidebar/sidebar.component.html
+++ b/Front/RoyalHotel-App/src/app/components/adm/sidebar/sidebar.component.html
@@ -1,22 +1,28 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px; height: 100%;">
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
-      <a href="#" class="nav-link active" aria-current="page">
+      <a href="/adm" class="nav-link active" aria-current="page">
         <svg class="bi me-2" width="16" height="16"></svg>
         Inicio
       </a>
     </li>
     <li>
-      <a href="/hospede/detalhe-hospede" class="nav-link text-white">
+      <a href="/cadastro-hospede" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"></svg>
         Cadastro Hospede
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link text-white">
+      <a href="/cadastrar-apartamento" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"></svg>
         Cadastro Apartamentos
+      </a>
+    </li>
+    <li>
+      <a href="/listar-apartamento" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16"></svg>
+        Apartamentos
       </a>
     </li>
     <li>
@@ -34,19 +40,13 @@
     <li>
       <a href="/listar-pedido" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"></svg>
-        Lista de Pedidos Registrados
+        Pedidos Registrados
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link text-white">
+      <a href="/reservas" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"></svg>
-        Lista de Reservas
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link text-white">
-        <svg class="bi me-2" width="16" height="16"></svg>
-        Apartamentos Disponíveis
+        Reservas
       </a>
     </li>
     <li>
@@ -58,13 +58,19 @@
     <li>
       <a href="/listar-produto" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-        Lista de Produtos
+        Produtos
       </a>
     </li>
     <li>
       <a href="/listar-fornecedor" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-        Lista de Fornecedores
+        Fornecedores
+      </a>
+    </li>
+    <li>
+      <a href="/cadastrar-fornecedor" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+        Cadastro de Fornecedores
       </a>
     </li>
     <li>
