--- a/Front/RoyalHotel-App/src/app/components/Acomodacoes/acomodacoes.component.html
+++ b/Front/RoyalHotel-App/src/app/components/Acomodacoes/acomodacoes.component.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <body>
   <div>
-    <!--================Booking Tabel Area =================-->
     <section class="accomodation_area section_gap">
       <div class="container">
         <div class="section_title text-center">
@@ -77,7 +76,7 @@
                 <a href="/reserve-agora" class="btn theme_btn button_hover">Reserve Agora</a>
               </div>
               <a href="#"><h4 class="sec_h4">Suíte Núpcias</h4></a>
-              <h5>$450<small>/noite</small></h5>
+              <h5>R$450<small>/noite</small></h5>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
@@ -87,7 +86,7 @@
                 <a href="/reserve-agora" class="btn theme_btn button_hover">Reserve Agora</a>
               </div>
               <a href="#"><h4 class="sec_h4">Suíte Super Luxo</h4></a>
-              <h5>$350<small>/noite</small></h5>
+              <h5>R$350<small>/noite</small></h5>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
@@ -97,7 +96,7 @@
                 <a href="/reserve-agora" class="btn theme_btn button_hover">Reserve Agora</a>
               </div>
               <a href="#"><h4 class="sec_h4">Suíte P.N.E.</h4></a>
-              <h5>$230<small>/noite</small></h5>
+              <h5>R$230<small>/noite</small></h5>
             </div>
           </div>
         </div>
