--- a/Front/RoyalHotel-App/src/app/components/adm/hospede/hospede-lista/hospede-lista.component.html
+++ b/Front/RoyalHotel-App/src/app/components/adm/hospede/hospede-lista/hospede-lista.component.html
@@ -1,81 +1,93 @@
-
-<div class="card rounded shadow-sm p-3">
-  <div class="d-flex">
-    <div class="flex-fill pr-3">
-      <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">Filtro: </div>
-        </div>
-        <input
-        type="text"
-        class="form-control"
-        placeholder="Filtrar por Tema e Local"
-        >
+<div class="container">
+  <div class="d-flex p-3 my-3 text-white bg-secondary rounded shadow-sm">
+    <div class="d-flex align-items-center mr-auto">
+      <i id="i" class="{{iconClass}} mr-3"></i>
+      <div class="lh-100">
+        <h2 class="mb-0">Hospedes</h2>
+        <small>{{subtitulo}}</small>
       </div>
     </div>
-    <div>
-      <a class="d-flex btn btn-outline-primary" routerLink="/nova-reserva">
-        <i class="fa fa-plus-circle my-1"></i>
-        <b class="ml-1 d-none d-sm-block">Nova Reserva</b>
-      </a>
+    <div class="p-3">
+      <button class="btn btn-outline-light" (click)="listar()">
+        Retornar ao Menu
+      </button>
     </div>
-    </div>
-  <!-- <h3>Filtro: {{filtroLista}}</h3> -->
-  <table class="table table-striped table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th>#</th>
-        <th>Hospede</th>
-        <th class="d-none d-md-table-cell">Apartamento</th>
-        <th>Data Entrada</th>
-        <th class="d-none d-md-table-cell">Data saída</th>
-        <th class="d-none d-md-table-cell">Tipo de Quarto</th>
-        <th class="d-none d-md-table-cell">Quantidade Pessoas</th>
-        <th class="d-none d-md-table-cell" >Total Pagamento Diarias</th>
-        <th class="d-none d-md-table-cell" >Status Pagamento</th>
-        <th>Opções</th>
-      </tr>
-   </thead>
-  <tbody>
-    <tr style="cursor: pointer;">
-      <td></td>
-      <td></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td class="d-none d-md-table-cell"></td>
-      <td>
-        <div class="btn-group">
-          <button class="btn btn-sm btn-success" tooltip="Editar" style="margin-right: 5px;">
-            <i class="fa fa-edit"></i>
-          </button>
-          <button class="btn btn-sm btn-danger" tooltip="Excluir" style="margin-right: 5px;">
-            <i class="fa fa-trash"></i>
-          </button>
-          <button tooltip="Fechar Conta" class="btn btn-sm btn-warning">
-            <i class="fas fa-money-bill-alt"></i>
-          </button>
-        </div>
-      </td>
-
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td colspan="8" class="text-center">
-        <h4>Nenhum hospede encontrado!</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
-</div>
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Tem certeza que deseja fechar a conta?</p>
-    <button type="button" class="btn btn-default">Sim</button>
-    <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
   </div>
-</ng-template>
+  <div class="card rounded shadow-sm p-3" style="margin-bottom: 100px;">
+    <div class="d-flex">
+      <div class="flex-fill pr-3">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">Filtro: </div>
+          </div>
+          <input
+          type="text"
+          class="form-control"
+          placeholder="Filtrar por Tema e Local"
+          >
+        </div>
+      </div>
+      <div>
+        <a class="d-flex btn btn-outline-primary" routerLink="/nova-reserva">
+          <i class="fa fa-plus-circle my-1"></i>
+          <b class="ml-1 d-none d-sm-block">Nova Reserva</b>
+        </a>
+      </div>
+      </div>
+    <table class="table table-striped table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th>#</th>
+          <th>Nome</th>
+          <th class="d-none d-md-table-cell">CPF</th>
+          <th>Endereço</th>
+          <th class="d-none d-md-table-cell">Cidade</th>
+          <th class="d-none d-md-table-cell">Estado</th>
+          <th class="d-none d-md-table-cell">Telefone</th>
+          <th class="d-none d-md-table-cell" >Celular</th>
+          <th class="d-none d-md-table-cell" >Email</th>
+          <th>Opções</th>
+        </tr>
+     </thead>
+    <tbody>
+      <tr style="cursor: pointer;">
+        <td></td>
+        <td></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td class="d-none d-md-table-cell"></td>
+        <td>
+          <div class="btn-group">
+            <button class="btn btn-sm btn-success" tooltip="Editar" style="margin-right: 5px;">
+              <i class="fa fa-edit"></i>
+            </button>
+            <button class="btn btn-sm btn-danger" tooltip="Excluir" style="margin-right: 5px;">
+              <i class="fa fa-trash"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="12" class="text-center">
+          <h4>Nenhum hospede encontrado!</h4>
+        </td>
+      </tr>
+    </tfoot>
+  </table>
+  </div>
+  <ng-template #template>
+    <div class="modal-body text-center">
+      <p>Tem certeza que deseja fechar a conta?</p>
+      <button type="button" class="btn btn-default">Sim</button>
+      <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
+    </div>
+  </ng-template>
+</div>
+
+
